<resources>
    <string name="app_name">AppleSugar</string>
    <string name="about_text">
        This app is designed for apple sugar inference.
        Select wavelength and capture images, after capturing
        images at each wavelength, click inference
        to get sugar content prediction.
        \n\nAuthor: Longqian Huang</string>
    <string name="help_text">
        Follow the following steps to obtain the apple sugar content.\n\n
<!--        1. Click the menu and choose the Bluetooth to connect the device.\n-->
<!--        2. Press 'Capture' button to open camera. Choose the corresponding\n-->
<!--        wavelength button to set camera parameters. \n-->
<!--        3. After obtaining 7 images, press 'Pick' button to set intensity data.\n-->
<!--        Switch 'bk|infer' to set background intensity or feature intensity,\n-->
<!--        4. Use Cla|Reg switch to change deep learning models, switch left to use classification-->
<!--        model, right to use regression model.\n-->
<!--        5. After setting all background and feature intensities, \n-->
<!--        oress 'Get Sugar' button to get predicted sugar content.-->
    </string>
    <string name="text_wl_680">680 nm</string>
    <string name="text_wl_700">700 nm</string>
    <string name="text_wl_720">720 nm</string>
    <string name="text_wl_760">760 nm</string>
    <string name="text_wl_780">780 nm</string>
    <string name="text_wl_800">800 nm</string>
    <string name="text_inference">Inference</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_text">Back</string>
    <string name="get_sugar_button_text">Get Sugar</string>
    <string name="button_680_text">680 nm</string>
    <string name="button_720_text">720 nm</string>
    <string name="button_760_text">760 nm</string>
    <string name="button_780_text">780 nm</string>
    <string name="button_800_text">800 nm</string>
    <string name="button_810_text">810 nm</string>
    <string name="back_button_text">Back</string>
    <string name="button_700_text">700 nm</string>
    <string name="team_info_text">超级无敌苹果队\n 鲍宇涵, 曹雯, 黄隆钤\n 浙江大学</string>
    <string name="menu_about_text">About</string>
    <string name="menu_help_text">Help</string>
    <string name="app_info_text">AI Sugar</string>
    <string name="text_wl_810">810 nm</string>
    <string name="button_830_text">830 nm</string>
    <string name="button_850_text">850 nm</string>
    <string name="capture_text">Capture</string>
    <string name="text_wl_830">830 nm</string>
    <string name="not_connected">Bluetooth not connected.</string>
    <string name="refresh">Refresh</string>
    <string name="menu_bluetooth_text">Bluetooth</string>
    <string name="select_bluetooth_device">Bluetooth Devices</string>
    <string name="pick_picture_text">Pick</string>
    <string name="light_control_text">Light Control</string>
    <string name="model_switch_text">Cla|Reg</string>
    <string name="bk_switch_text">Bk|Infer</string>
    <string name="button_730_text">730 nm</string>
    <string name="developer_text">Developer mode</string>
    <string name="apple_recorded_text">New Apple</string>
    <string name="apple_drop_text">Drop Apple</string>
    <string name="apple_num_text">Apple Num: %1d</string>


</resources>