<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inferFragment">


<!--    <ImageSwitcher-->
<!--        android:id="@+id/imageSW"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="327dp"></ImageSwitcher>-->


        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <androidx.camera.view.PreviewView-->
<!--            android:id="@+id/cameraPreviewView"-->
<!--            android:layout_width="390dp"-->
<!--            android:layout_height="234dp"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--        </androidx.camera.view.PreviewView>-->

            <Button
                android:id="@+id/capture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:text="@string/capture_text"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/pick_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/appinfoView"
                style="@style/aboutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/app_info_text"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/pick680_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/button_background_color"
                android:text="@string/button_680_text"
                app:layout_constraintEnd_toStartOf="@+id/pick700_button"
                app:layout_constraintTop_toTopOf="@+id/pick700_button" />

            <Button
                android:id="@+id/pick780_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/button_background_color"
                android:text="@string/button_780_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pick700_button" />


            <Button
                android:id="@+id/pick760_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_background_color"
                android:text="@string/button_760_text"
                app:layout_constraintStart_toStartOf="@+id/pick680_button"
                app:layout_constraintTop_toTopOf="@+id/pick780_button" />

            <Button
                android:id="@+id/pick720_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:backgroundTint="@color/button_background_color"
                android:text="@string/button_720_text"
                app:layout_constraintStart_toEndOf="@+id/pick700_button"
                app:layout_constraintTop_toTopOf="@+id/pick700_button" />


            <Button
                android:id="@+id/pick850_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/button_background_color"
                android:text="@string/button_850_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pick780_button" />

            <Button
                android:id="@+id/pick800_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_background_color"
                android:text="@string/button_800_text"
                app:layout_constraintEnd_toEndOf="@+id/pick720_button"
                app:layout_constraintTop_toTopOf="@+id/pick780_button" />

            <Button
                android:id="@+id/pick830_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/button_background_color"
                android:text="@string/button_830_text"
                app:layout_constraintEnd_toStartOf="@+id/pick850_button"
                app:layout_constraintStart_toStartOf="@+id/pick760_button"
                app:layout_constraintTop_toTopOf="@+id/pick850_button" />

            <Button
                android:id="@+id/get_sugar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/get_sugar_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pick850_button" />

            <TextView
            android:id="@+id/sugar_text"
            style="@style/aboutStyle"
            android:layout_width="263dp"
            android:layout_height="47dp"
            android:layout_marginTop="@dimen/layout_margin"
            android:text=""
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_sugar_button" />

<!--        <ImageView-->
<!--            android:id="@+id/image_origin"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="240dp"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginTop="@dimen/layout_margin"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:src="@tools:sample/avatars" />-->

<!--        <ImageView-->
<!--            android:id="@+id/image_processed"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="240dp"-->
<!--            android:layout_marginTop="@dimen/layout_margin"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/image_origin"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:src="@tools:sample/avatars" />-->

            <Button
                android:id="@+id/pick700_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:backgroundTint="@color/button_background_color"
                android:text="@string/button_700_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_sugar_text" />

            <TextView
                android:id="@+id/show_sugar_text"
                style="@style/aboutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="284dp"
                android:text="sugar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/pick_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/pick_picture_text"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/show_sugar_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/model_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/model_switch_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/get_sugar_button"
                app:layout_constraintTop_toBottomOf="@+id/pick830_button" />

            <Switch
                android:id="@+id/bk_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginBottom="32dp"
                android:text="@string/bk_switch_text"
                app:layout_constraintBottom_toTopOf="@+id/show_sugar_text"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/light_control_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/light_control_text"
                app:layout_constraintBottom_toTopOf="@+id/bk_switch"
                app:layout_constraintEnd_toEndOf="@+id/bk_switch" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>